(Kinda) fix layout issue

--- a/style.css
+++ b/style.css
@@ -14,8 +14,9 @@ body {
     background-color: #101B26;
     background: url("resource/twinkle-light.gif");
     color: white;
-    font-family: sans-serif;
+    font-family: "bookman old style";
     text-align: center;
+		display: grid;
 }
 h1{
     font-size: 7vw;
@@ -55,7 +56,7 @@ label{
     animation: glowing 4000ms infinite;
 }
 
-.result{
+#result{
 	display: none;
 }
 
@@ -73,18 +74,27 @@ label{
 #information{
 	text-align: left;
 	position: relative;
-	top: -40vh;
+	top: -30vh;
 	float: right;
 	font-size: 1.5vw;
+	background-color: rgba(0,0,0,0.6);
+	border-radius: 5px;
+	padding: 10px;
   width: 60%;
 }
 
 #constellation{
 	width: 50%;
 }
+#solar-system{
+	text-align: center;
+	width: 85%;
+	margin: auto;
+	position: relative;
+}
 
-body {
-    font-family: "bookman old style";
+#solar-system img{
+	width:100%;
 }
 :target {
     color: lightyellow;
